# simple-summarize

./: .flake8  .gitignore  .vscodesettings.json  2.0  LICENSE  README.md  mypy.init  pyproject.toml  requirements-dev.txt  requirements.txt  run_serber.bat
.github/workflows/: ci.yml  test.yml
app/: main.py
app/api/: admin.py  admin_router.py  auth.py  file.py  health.py  summarize.py  summarize_router.py
app/config/: config_manager.py  error_handler.py  middleware.py  models.json  plan_config.py  plan_limits.json  redis_client.py  settings.py
app/core/: config.py  exceptions.py  logging.py  utils.py
app/middleware/: limiter.py
app/models/: file.py  request_model.py  response_model.py  summary.py  user.py
app/security/: auth.py  user_roles.py
app/services/: __init__.py  analytics.py  base_model.py  file_handler.py  file_parser.py  language.py  limiter.py  model_loader.py  statistics.py  summarizer.py
app/services/models/: __init__.py  dummy.py  huggingface.py  model_factory.py
app/test/: test_conf.py  test_file_size_limit.py  test_file_upload.py  test_jwt.py  test_logging.py  test_main.py  test_summarizer.py
app/utils/: error_handler.py  jwt_handler.py  model_utils.py
config/: db.py  plan_config.py  settings.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  docs.md  rate_limit_spec.md
scripts/: scripts.md
test/: test_api_summarize.py  test_auth.py  test_base_model.py  test_conf.py  test_dummy_model.py  test_error_handling.py  test_file_upload.py  test_huggingface_model.py  test_main.py  test_model_factory.py  test_plan_config.py  test_summarizer.py  test_summarizer_service.py
tests/unit/: test_settings.py
