[project]
name = "simple-summarize"
version = "1.0.0"
description = "FastAPI-based text summarization API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pavanepour.k", email = "pavanepour.k@example.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.dependencies]
fastapi = ">=0.110.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
python-dotenv = ">=1.0.0"
redis = { version = ">=6.0.0", extras = ["async"] }
transformers = ">=4.30.0"
torch = ">=2.0.0"
python-jose = { version = ">=3.3.0", extras = ["cryptography"] }
python-multipart = ">=0.0.5"
PyMuPDF = ">=1.23.0"
python-docx = ">=1.0.0"
langdetect = ">=1.0.9"
httpx = ">=0.24.0"
opentelemetry-api = ">=1.20.0"
opentelemetry-sdk = ">=1.20.0"
opentelemetry-exporter-otlp = ">=1.20.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "pylint>=3.0",
    "mypy>=1.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/pavanepour-k/simple-summarize"
Issues = "https://github.com/pavanepour-k/simple-summarize/issues"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
max-line-length = 80
disable = [
    "C0301", # Line too long (handled by black)
    "C0114", # Missing module docstring
    "R0903", # Too few public methods
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
